build: simplify gradle setup for sbssh integration